--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,4 +3,5 @@
 </h1>
 <p>Probando</p>
 <app-other></app-other>
-<app-another></app-another>
+<app-another>probando1</app-another>
+<app-another>probando2</app-another>
