--- a/src/app/other/other.component.html
+++ b/src/app/other/other.component.html
@@ -13,3 +13,11 @@ Número: <app-property-binding [result]="10"></app-property-binding>
 
 <h1>Event Binding</h1>
 <app-event-binding (clicked)="onClicked($event)"></app-event-binding>
+
+<h1>Life cycle</h1>
+<app-lifecycle *ngIf="!delete" [bindable]="boundValue">
+    <p>{{test}}</p>
+</app-lifecycle>
+<button (click)="delete = true">Click to delete Life Cycle</button>
+<button (click)="test= 'Changed'">Click to change</button>
+<button (click)="boundValue= 2000">Click to change bind</button>
